--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply
+  bg-gradient-to-r from-transparent via-pink-400/10 to-transparent
+  dark:bg-gradient-to-r dark:from-dark-tremor-background dark:via-dark-tremor-background-subtle/30 dark:to-dark-tremor-brand-faint/50
 }
 
 code {
