added basic styling for block page

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  @apply
+  text-blue-500;
+}
+
+a:hover {
+  @apply
+  text-blue-700;
+}
